@@ -4,7 +4,7 @@ import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableMap;
 import io.kestra.core.models.annotations.PluginSubGroup;
 import io.kestra.core.models.conditions.Condition;
-import io.kestra.core.models.script.ScriptRunner;
+import io.kestra.core.models.tasks.runners.TaskRunner;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.plugins.RegisteredPlugin;
@@ -27,7 +27,6 @@ import lombok.Getter;
 import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
-import java.io.StringWriter;
 import java.io.Writer;
 import java.util.*;
 import java.util.regex.Pattern;
@@ -53,7 +52,7 @@ public class DocumentationGenerator {
                 @Override
                 public Map<String, Filter> getFilters() {
                     Map<String, Filter> filters = new HashMap<>();
-                    filters.put("json", new JsonFilter());
+                    filters.put("json", new JsonEncodeFilter());
                     return filters;
                 }
             })
@@ -70,7 +69,7 @@ public class DocumentationGenerator {
         result.addAll(this.generate(registeredPlugin, registeredPlugin.getTasks(), Task.class, "tasks"));
         result.addAll(this.generate(registeredPlugin, registeredPlugin.getTriggers(), AbstractTrigger.class, "triggers"));
         result.addAll(this.generate(registeredPlugin, registeredPlugin.getConditions(), Condition.class, "conditions"));
-        result.addAll(this.generate(registeredPlugin, registeredPlugin.getScriptRunner(), ScriptRunner.class, "scriptRunner"));
+        result.addAll(this.generate(registeredPlugin, registeredPlugin.getTaskRunners(), TaskRunner.class, "task-runners"));
 
         result.addAll(guides(registeredPlugin));
 
@@ -153,7 +152,7 @@ public class DocumentationGenerator {
             )
             .collect(Collectors.groupingBy(
                 ClassPlugin::getSubgroup,
-                Collectors.groupingBy(ClassPlugin::getType)
+                Collectors.groupingBy(classPlugin -> Slugify.toStartCase(classPlugin.getType()))
             ));
     }
 
@@ -202,7 +201,7 @@ public class DocumentationGenerator {
                 e.getValue(),
                 null
             )))
-            .collect(Collectors.toList());
+            .toList();
     }
 
 
@@ -221,7 +220,7 @@ public class DocumentationGenerator {
                     throw new RuntimeException(e);
                 }
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private static String docPath(RegisteredPlugin registeredPlugin) {
@@ -254,7 +253,7 @@ public class DocumentationGenerator {
 
         PebbleTemplate compiledTemplate = pebbleEngine.getLiteralTemplate(pebbleTemplate);
 
-        Writer writer = new JsonWriter(new StringWriter());
+        Writer writer = new JsonWriter();
         compiledTemplate.evaluate(writer, vars);
         String renderer = writer.toString();
 
