@@ -9,7 +9,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Value
-@Builder
+@Builder(toBuilder = true)
 public class FlowGraph {
     List<AbstractGraph> nodes;
     List<Edge> edges;
@@ -26,12 +26,26 @@ public class FlowGraph {
                     .nodes()
                     .stream()
                     .map(AbstractGraph::getUid)
-                    .collect(Collectors.toList()),
+                    .toList(),
                     g.getValue(),
                     g.getKey().getRoot().getUid(),
                     g.getKey().getEnd().getUid()
                 ))
-                .collect(Collectors.toList())
+                .toList()
+            )
+            .build();
+    }
+
+    /**
+     * This method is used to clean the graph for informations
+     * people with only EXECUTION - READ permission should not have access to.
+     */
+    public FlowGraph forExecution() {
+        return this.toBuilder()
+            .nodes(this.nodes
+                .stream()
+                .map(AbstractGraph::forExecution)
+                .toList()
             )
             .build();
     }
